--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="header">
         <p>Disk: </p>
-        <div>6</div>
-        <div class="btn">+</div>
-        <div class="btn">-</div>
+        <div id="num-ring">3</div>
+        <div class="btn" onclick="addRing()">+</div>
+        <div class="btn" onclick="removeRing()">-</div>
         <p class="mov-num">Move: </p>
-        <p class="mov-num"> 6 </p>
+        <p class="mov-num" > 3 </p>
         <p class="btn">Restart</p>
         <p class="btn">Hint</p>
         <p class="btn">Solve</p>
