add and remove ring to the first tour

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p class="btn">Hint</p>
         <p class="btn">Solve</p>
     </div>
+    <div class="work-status" id="work-status">Let's Start Play</div>
     <div class="paly-body">
         <div class="tour">
             <!-- <div class="ring-1"></div> -->
