user mode almost finished

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="btn" onclick="addRing()">+</div>
         <div class="btn" onclick="removeRing()">-</div>
         <p class="mov-num">Move: </p>
-        <p class="mov-num" > 3 </p>
+        <p class="mov-num" id="moves-num" > 0 </p>
         <p class="btn">Restart</p>
         <p class="btn">Hint</p>
         <p class="btn">Solve</p>
