add move ring feature

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
         <p class="mov-num" id="moves-num" > 0 </p>
         <p class="btn">Restart</p>
         <p class="btn">Hint</p>
-        <p class="btn">Solve</p>
+        <p class="btn" id="solve-btn" onclick="moveRing(0,1)">Solve</p>
     </div>
     <div class="work-status" id="work-status">Let's Start Play</div>
+    <div class="transitionArea">
+        <div class="area"></div>
+        <div class="area"></div>
+        <div class="area"></div>
+    </div>
     <div class="paly-body">
         <div class="tour">
             <!-- <div class="ring-1"></div> -->
