start moving rings with bugs when have 6 rings

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="header">
         <p>Disk: </p>
         <div id="num-ring">3</div>
-        <div class="btn" onclick="addRing()">+</div>
-        <div class="btn" onclick="removeRing()">-</div>
+        <div class="btn" id="inc-btn">+</div>
+        <div class="btn" id="dec-btn">-</div>
         <p class="mov-num">Move: </p>
         <p class="mov-num" id="moves-num" > 0 </p>
         <p class="btn">Restart</p>
         <p class="btn">Hint</p>
-        <p class="btn" id="solve-btn" onclick="moveRing(0,1)">Solve</p>
+        <p class="btn" id="solve-btn">Solve</p>
     </div>
     <div class="work-status" id="work-status">Let's Start Play</div>
     <div class="transitionArea">
