--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
         <p>Disk: </p>
         <div id="num-ring">3</div>
-        <div class="btn" id="inc-btn">+</div>
-        <div class="btn" id="dec-btn">-</div>
+        <div class="btn" id="inc-btn"><i class="fas fa-arrow-up"></i></div>
+        <div class="btn" id="dec-btn"><i class="fas fa-arrow-down"></i></div>
         <p class="mov-num">Move: </p>
         <p class="mov-num" id="moves-num" > 0 </p>
         
@@ -52,9 +52,9 @@
         <div class="tour">
             <!-- <div class="ring-1"></div> -->
             <div class="ring-container">
-                <div class="ring" draggable="true"></div>
-                <div class="ring" draggable="true"></div>
-                <div class="ring" draggable="true"></div>
+                <div class="ring"></div>
+                <div class="ring"></div>
+                <div class="ring"></div>
             </div>
             <div class="vertical">
                 
@@ -92,5 +92,6 @@
     <div class="min-mov" id="min-mov">minimum number of movement: 7</div>
     </div>
     <script type="module" src="./index.js"></script>
+    <script src="https://kit.fontawesome.com/eb1433d618.js" crossorigin="anonymous"></script>
 </body>
 </html>
