add feature of finish game

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
         
         
     </div>
-    <div class="work-status" id="work-status">Let's Start Play</div>
+    <div class="stBox">
+        <div class="work-status" id="work-status">Let's Start Play </div>
+        <p class="btn fontStyleHeader" id="tryAgain">try again</p>
+    </div>
     <div class="transitionArea">
         <div class="area"></div>
         <div class="area"></div>
